--- a/gallery.html
+++ b/gallery.html
@@ -13,8 +13,8 @@
         <div class="lab-header">
             <canvas id="neural-network-canvas"></canvas>
             <div class="lab-header-content">
-                <h1 class="lab-title">Computational Memory Lab</h1>
-                <p class="lab-subtitle">at the Department of Neuroscience, City University of Hong Kong</p>
+                <h1 class="lab-title">CityUHK Computational Memory Lab</h1>
+                <!-- <p class="lab-subtitle">at the Department of Neuroscience</p> -->
             </div>
         </div>
         <nav class="nav-bar">
@@ -35,7 +35,7 @@
             <section class="section">
                 <h2>Lab Space</h2>
 
-                *My lab (and the entire CityU Neuroscience) will move to the newly constructed <a href="https://www.cityu.edu.hk/cdo/default.aspx?PageID=sports">the Jockey Club One Health Tower</a>. 
+                *My lab (and CityU Neuroscience) will move to the newly constructed <a href="https://www.cityu.edu.hk/cdo/default.aspx?PageID=sports">the Jockey Club One Health Tower</a>. 
                 <br>
                 More photos coming soon!
                 <!-- <h3>Lab Events & Activities</h3>
