--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         <div class="lab-header">
             <canvas id="neural-network-canvas"></canvas>
             <div class="lab-header-content">
-                <h1 class="lab-title">Computational Memory Lab</h1>
-                <p class="lab-subtitle">at the Department of Neuroscience, City University of Hong Kong</p>
+                <h1 class="lab-title">CityUHK Computational Memory Lab</h1>
+                <!-- <p class="lab-subtitle">at the Department of Neuroscience</p> -->
             </div>
         </div>
         <nav class="nav-bar">
@@ -33,17 +33,17 @@
         <section class="hero-section">
             <div class="container">
                 <div class="hero-content">
-                    <p> 
-                        Thanks for visiting my lab page! I will get started in CityUHK in Jan 2026! 
+                    <p>
+                        Thanks for visiting my lab page! I will get started in CityUHK in Jan 2026!
                         <br>
-                        <strong>I have RA, PhD, and postdoc positions available! </strong> 
+                        <strong>I have RA, PhD, and postdoc positions available! </strong>
                         <br>
                         Come work with me on <strong>neural network models + behavioral/neuroimging experiments on human memory and NeuroAI!</strong>
                         <br>
-                        Please check out <a href="join.html">this page</a> for more info! 
-                        
+                        Please check out <a href="join.html">this page</a> for more info!
+
                     </p>
-                    
+
                 </div>
             </div>
         </section>
@@ -51,14 +51,14 @@
         <section class="section">
             <div class="container">
                 <h2>Research</h2>
-                <p>                
-                <b>Episodic memory (EM)</b> enables us to rapidly encode information upon a single exposure and retrieve it later, which is critical for adaptive behavior. 
-                Yet many fundamental questions remain unclear. How does the brain use EM to support cognition? How does the brain coordinate EM with other memory systems? What's the optimal coordination strategy, and to what extent does the optimal strategy explain human behavior? 
+                <p>
+                <b>Episodic memory (EM)</b> enables us to rapidly encode information upon a single exposure and retrieve it later, which is critical for adaptive behavior.
+                Yet many fundamental questions remain unclear. How does the brain use EM to support cognition? How does the brain coordinate EM with other memory systems? What's the optimal coordination strategy, and to what extent does the optimal strategy explain human behavior?
                 <br><br>
-                To investigate computational principles of learning and memory, 
-                we use <b>artificial neural networks as model organisms</b>. 
-                And we test model predictions with <b>human behavioral and neuroimaging experiments</b>. 
-                By reverse-engineering human memory in a neural network model, 
+                To investigate computational principles of learning and memory,
+                we use <b>artificial neural networks as model organisms</b>.
+                And we test model predictions with <b>human behavioral and neuroimaging experiments</b>.
+                By reverse-engineering human memory in a neural network model,
                 we can gain insight into the cognitive architecture the brain employs and the statistical structure of the environment we live in.
 
                 </p>
@@ -117,7 +117,7 @@
                     </div>
                 </div>
             </div>
-        </section>        
+        </section>
 
 
         <!-- <section class="section">
