update lab name

--- a/gallery.html
+++ b/gallery.html
@@ -13,8 +13,8 @@
         <div class="lab-header">
             <canvas id="neural-network-canvas"></canvas>
             <div class="lab-header-content">
-                <h1 class="lab-title">CityUHK Computational Memory Lab</h1>
-                <!-- <p class="lab-subtitle">at the Department of Neuroscience</p> -->
+                <h1 class="lab-title">Human & Machine Memory Lab</h1>
+                <p class="lab-subtitle">at the Department of Neuroscience, City University of Hong Kong</p>
             </div>
         </div>
         <nav class="nav-bar">
