--- a/join.html
+++ b/join.html
@@ -127,7 +127,7 @@
                             </ul>
                             <li>Please indicate your ideal start date and whether there is any flexibility with the start date</li>
                             <li>Your github repo or other code samples</li>
-                            <li>Contact info for 1 references</li>
+                            <li>Contact info for 1 reference</li>
                         </ul>
                     </ul>
                 </div>
