--- a/index.html
+++ b/index.html
@@ -147,12 +147,16 @@
                     </div>
                     <div class="contact-info">
                         <h3>Email</h3>
-                        <a href="mailto:qlu.neuro@gmail.com">qlu.neuro@gmail.com</a>
+                        <!-- <a href="mailto:qlu.neuro@gmail.com">qlu.neuro@gmail.com</a> -->
+                        <a href="mailto:qihong.lu@cityu.edu.hk">qihong.lu@cityu.edu.hk</a>
+                        
                     </div>
 
                     <div class="contact-info">
                         <h3>Info</h3>
-                        <a href="https://docs.google.com/document/d/1BbRz7WbxxJ4s1wa3xaVEsZNLDXj2Ve4_eMYq8I7zBIQ/edit?usp=sharing">Lab manual</a> (in progress)
+                        <a href="https://docs.google.com/document/d/1BbRz7WbxxJ4s1wa3xaVEsZNLDXj2Ve4_eMYq8I7zBIQ/edit?usp=sharing">Lab Manual</a> (in progress)
+                        <br>
+                        <a href="https://github.com/qlulab">Lab GitHub</a>
                     </div>
                 </div>
             </div>
