--- a/join.html
+++ b/join.html
@@ -101,7 +101,7 @@
                 <br>
                     CityUHK is an English-speaking environment and a very international university, so we welcome students from all over the world!
                 <br>
-                    Contact: qlu.neuro@gmail.com
+                    Contact: qihong.lu@cityu.edu.hk
                 <br><br>
 
                 <div class="collapsible" onclick="toggleSection(this)">
@@ -169,9 +169,10 @@
 
                         <li> Funding schemes and scholarships opportunities:
                             <ul>
-                                <li>Exceptional students will be supported to apply for the <a href="https://cerg1.ugc.edu.hk/hkpfs/index.html">Hong Kong PhD Fellowship Scheme</a>.</li>
+                                <li><a href="https://cerg1.ugc.edu.hk/hkpfs/index.html">Hong Kong PhD Fellowship Scheme</a></li>
+                                <li>NSFC PhD Student Scheme (国家自然科学基金青年学生基础研究项目(博士研究生))</li>
                                 <li><a href="https://www.edb.gov.hk/en/edu-system/postsecondary/local-higher-edu/publicly-funded-programmes/scholarship.html">Belt and Road Scholarship</a></li>
-                                <li>CityUHK has a generous scholarship program for PhD students. Please see the <a href="https://www.cityu.edu.hk/pg/research-degree-programmes/scholarships-financial-aid-and-fees">CityUHK scholarships page</a> for more info.</li>
+                                <li><a href="https://www.cityu.edu.hk/pg/research-degree-programmes/scholarships-financial-aid-and-fees">CityUHK internal scholarship program for PhD students</a></li>
                             </ul>
                         </li>
                     </ul>
@@ -224,7 +225,9 @@
                         <ul>
                             <li>My research grants</li>
                             <li><a href="https://www.ugc.edu.hk/eng/rgc/funding_opport/pdfs/index.html">RGC Postdoctoral Fellowship Scheme</a></li>
-                            <li><a href="https://www.ugc.edu.hk/eng/rgc/funding_opport/jrfs/">RGC Junior Research Fellow Scheme </a></li>                            
+                            <li><a href="https://www.ugc.edu.hk/eng/rgc/funding_opport/jrfs/">RGC Junior Research Fellow Scheme </a></li>          
+                            <li><a href="https://www.hkscholars.org/a-list/10545-eng">Hong Kong Scholars Program</a></li>                  
+                            <li><a href="https://croucher.org.hk/en/funding/study-awards/postdoctoral-fellowships">Croucher Fellowships for Postdoctoral Research</a></li>
                         </ul>
                     </ul>
                 </div>
