--- a/people.html
+++ b/people.html
@@ -45,9 +45,10 @@
                             <a href="https://scholar.google.com/citations?user=b9D0RmMAAAAJ&hl=en&oi=ao">Google Scholar</a>
                             <a href="https://twitter.com/Qihong_Lu">X</a>
                             <a href="https://bsky.app/profile/qlu.bsky.social">Bluesky</a>
-                            <a href="https://www.researchgate.net/profile/Qihong-Lu-2">ResearchGate</a>
+                            <!-- <a href="https://www.researchgate.net/profile/Qihong-Lu-2">ResearchGate</a> -->
                             <a href="https://github.com/QihongL">GitHub</a>
                             <a href="https://orcid.org/0000-0002-0730-5240">ORCID</a>
+                            <a href="https://www.cityu.edu.hk/neuro/profile/qihonglu.htm">CityU profile page</a>
                         </div>
                     </div>
                 <!-- </div>
@@ -95,6 +96,7 @@
                         <li>Kenneth Norman, Princeton University</li>
                         <li>Jonathan Cohen, Princeton University</li>
                         <li>Timothy Buschman, Princeton University</li>
+                        <li>Sebastian Michelmann, New York University</li>
                         <li>Marcelo Mattar, New York University</li>
                         <li>Kristopher Jensen, University College London</li>
                         <li>Jeffrey Zacks, Washington University in St. Louis</li>
