--- a/publications.html
+++ b/publications.html
@@ -90,6 +90,26 @@
                     <br><br>
                     <div class="timeline-container">
 
+                      <div class="publication">
+                          <div class="timeline-marker">2025</div>
+                          <div class="publication-title">A neural network with episodic memory learns causal relationships between narrative events.</div>
+                          <div class="publication-authors">Song, H., <strong>Lu, Q.</strong>, Nguyen, T. T., Chen, J., Leong, Y. C., Rosenberg, M. D., Ching, S., & Zacks, J. M.</div>
+                          <div class="publication-venue">bioRxiv, 2025.</div>
+                          <div class="publication-links">
+                              <a href="https://www.biorxiv.org/content/10.1101/2025.09.01.673596v1">[PDF]</a>
+                          </div>
+                      </div>
+
+                      <div class="publication">
+                        <div class="timeline-marker">2025</div>
+                        <div class="publication-title">A neural network model of free recall learns multiple memory strategies.</div>
+                        <div class="publication-authors">Li, M., Jensen, K. T., Zhang, Q., <strong>Lu, Q.</strong>, \& Mattar, M. G.</div>
+                        <div class="publication-venue">bioRxiv, 2025.</div>
+                        <div class="publication-links">
+                            <a href="https://doi.org/10.1101/2025.09.25.678592">[PDF]</a>
+                        </div>
+                    </div> 
+
                     <div class="publication">
                         <div class="timeline-marker">2025</div>
                         <div class="publication-title">Towards Large Language Models with Human-Like Episodic Memory.</div>
@@ -195,6 +215,10 @@
                 <div id="talks" class="publication-section" style="display: none;">
                     <h3>Invited Talks & Seminars</h3>
                     <div class="timeline-container">
+                        <div class="publication">
+                            <div class="timeline-marker">2025</div>
+                            <div class="publication-title">Working Memory Symposium</div>
+                        </div>                        
                         <div class="publication">
                             <div class="timeline-marker">2025</div>
                             <div class="publication-title">Chen Lab & Honey Lab, Johns Hopkins University (PI: Janice Chen & Chris Honey)</div>
