--- a/publications.html
+++ b/publications.html
@@ -101,9 +101,8 @@
                       </div>
 
                       <div class="publication">
-                        <div class="timeline-marker">2025</div>
                         <div class="publication-title">A neural network model of free recall learns multiple memory strategies.</div>
-                        <div class="publication-authors">Li, M., Jensen, K. T., Zhang, Q., <strong>Lu, Q.</strong>, \& Mattar, M. G.</div>
+                        <div class="publication-authors">Li, M., Jensen, K. T., Zhang, Q., <strong>Lu, Q.</strong>, & Mattar, M. G.</div>
                         <div class="publication-venue">bioRxiv, 2025.</div>
                         <div class="publication-links">
                             <a href="https://doi.org/10.1101/2025.09.25.678592">[PDF]</a>
@@ -111,7 +110,6 @@
                     </div> 
 
                     <div class="publication">
-                        <div class="timeline-marker">2025</div>
                         <div class="publication-title">Towards Large Language Models with Human-Like Episodic Memory.</div>
                         <div class="publication-authors">Dong, V. C., <strong>Lu, Q.</strong>, Norman, K. A. & Michelmann, S. </div>
                         <div class="publication-venue">Trends in Cognitive Sciences, 2025.</div>
@@ -132,7 +130,6 @@
                     </div>
 
                     <div class="publication">
-                        <div class="timeline-marker">2024</div>
                         <div class="publication-title">Reconciling shared versus context-specific information in a neural network model of latent causes.</div>
                         <div class="publication-authors"><strong>Lu, Q.</strong>, Nguyen, T., Zhang, Q., Hasson, U., Griffiths, T. L., Zacks, J. M., Gershman, S. J., & Norman, K. A.</div>
                         <div class="publication-venue">Scientific Reports, 2024</div>
@@ -154,7 +151,6 @@
                     </div>
 
                     <div class="publication">
-                        <div class="timeline-marker">2022</div>
                         <div class="publication-title">BrainIAK: The Brain Imaging Analysis Kit.</div>
                         <div class="publication-authors">Kumar, M., Anderson, M.J., Antony, J.W., Baldassano C., Brooks, P.P., Cai, M.B., Chen, P.H.C., Ellis, C.T., Henselman-Petrusek, G., Huberdeau, D., Hutchinson, J.B., Li, P.Y., <strong>Lu, Q.</strong>, Manning, J.R., Mennen, A.C., Nastase, S.A., Hugo, R., Schapiro, A.C., Schuck, N.W., Shvartsman, M., Sundaram, N., Suo, D., Turek, J.S., Vo, V.A., Wallace, G., Wang, Y., Zhang, H., Zhu, X., Capota, M., Cohen, J.D., Hasson, U., Li, K., Ramadge, P.J., Turk-Browne, N.B., Willke, T.L. & Norman, K.A. </div>
                         <div class="publication-venue">Aperture Neuro, 2022</div>
@@ -178,7 +174,6 @@
                     </div>
 
                     <div class="publication">
-                        <div class="timeline-marker">2021</div>
                         <div class="publication-title">Learning to perform role-filler binding with schematic knowledge.</div>
                         <div class="publication-authors">Chen, C., <strong>Lu, Q.</strong>, Beukers, A., Baldassano, C., & Norman, K. A.</div>
                         <div class="publication-venue">PeerJ, 2021</div>
@@ -220,35 +215,27 @@
                             <div class="publication-title">Working Memory Symposium</div>
                         </div>                        
                         <div class="publication">
-                            <div class="timeline-marker">2025</div>
                             <div class="publication-title">Chen Lab & Honey Lab, Johns Hopkins University (PI: Janice Chen & Chris Honey)</div>
                         </div>
                         <div class="publication">
-                            <div class="timeline-marker">2025</div>
                             <div class="publication-title">Division of Social Science, Hong Kong University of Science and Technology</div>
                         </div>
                         <div class="publication">
-                            <div class="timeline-marker">2025</div>
                             <div class="publication-title">Department of Psychology, The University of Hong Kong</div>
                         </div>
                         <div class="publication">
-                            <div class="timeline-marker">2025</div>
                             <div class="publication-title">Affective, Neuroscience, and Decision-making Lab, University of Macau (PI: Haiyan Wu)</div>
                         </div>
                         <div class="publication">
-                            <div class="timeline-marker">2025</div>
                             <div class="publication-title">Department of Psychology, Chinese University of Hong Kong</div>
                         </div>
                         <div class="publication">
-                            <div class="timeline-marker">2025</div>
                             <div class="publication-title">Laboratory of Cognitive Computational Neuroscience and Neuroimaging, Shanghai Jiao Tong University (PI: Ru-Yuan Zhang)</div>
                         </div>
                         <div class="publication">
-                            <div class="timeline-marker">2025</div>
                             <div class="publication-title">NYUConcats seminar, Psychology Department, New York University</div>
                         </div>
                         <div class="publication">
-                            <div class="timeline-marker">2025</div>
                             <div class="publication-title">Department of Neuroscience, City University of Hong Kong</div>
                         </div>
                         <div class="publication">
@@ -256,27 +243,21 @@
                             <div class="publication-title">The School of Psychology and Cognitive Science, East China Normal University</div>
                         </div>
                         <div class="publication">
-                            <div class="timeline-marker">2024</div>
                             <div class="publication-title">Kwok Lab, Duke Kunshan University (PI: Sze Chai Kwok)</div>
                         </div>
                         <div class="publication">
-                            <div class="timeline-marker">2024</div>
                             <div class="publication-title">Nanosymposium on Value-Based Decision Making Across Model Systems, Society for Neuroscience (SfN)</div>
                         </div>
                         <div class="publication">
-                            <div class="timeline-marker">2024</div>
                             <div class="publication-title">Annual Meeting of the Cognitive Science Society (Cogsci)</div>
                         </div>
                         <div class="publication">
-                            <div class="timeline-marker">2024</div>
                             <div class="publication-title">Manhattan Area Memory Meeting, Yale University</div>
                         </div>
                         <div class="publication">
-                            <div class="timeline-marker">2024</div>
                             <div class="publication-title">Context and Episodic Memory Symposium (CEMS), University of Pennsylvania</div>
                         </div>
                         <div class="publication">
-                            <div class="timeline-marker">2024</div>
                             <div class="publication-title">Tianqiao and Chrissy Chen Institute, Shanghai</div>
                         </div>
                         <div class="publication">
@@ -284,11 +265,9 @@
                             <div class="publication-title">Mattar Lab, New York University (PI: Marcelo Mattar)</div>
                         </div>
                         <div class="publication">
-                            <div class="timeline-marker">2023</div>
                             <div class="publication-title">Department of Psychology, The University of Hong Kong</div>
                         </div>
                         <div class="publication">
-                            <div class="timeline-marker">2023</div>
                             <div class="publication-title">Shohamy Lab, Columbia University (PI: Daphna Shohamy)</div>
                         </div>
                         <div class="publication">
@@ -296,11 +275,9 @@
                             <div class="publication-title">Computational Cognitive Neuroscience Lab, University of Pennsylvania (PI: Anna Schapiro)</div>
                         </div>
                         <div class="publication">
-                            <div class="timeline-marker">2022</div>
                             <div class="publication-title">State Key Laboratory of Cognitive Sciences and Learning, Beijing Normal University (PI: Yunzhe Liu)</div>
                         </div>
                         <div class="publication">
-                            <div class="timeline-marker">2022</div>
                             <div class="publication-title">Mila Neural-AI Reading Group, Mila - Quebec AI Institute</div>
                         </div>
                         <div class="publication">
@@ -308,26 +285,21 @@
                             <div class="publication-title">Honey Lab & Chen Lab, Johns Hopkins University (PI: Chris Honey & Janice Chen)</div>
                         </div>
                         <div class="publication">
-                            <div class="timeline-marker">2021</div>
                             <div class="publication-title">Contextual Dynamics Lab, Dartmouth College (PI: Jeremy Manning)</div>
                         </div>
                         <div class="publication">
-                            <div class="timeline-marker">2021</div>
                             <div class="publication-title">Oxford Neurotheory Lab, University of Oxford (PI: Andrew Saxe)</div>
                         </div>
                         <div class="publication">
-                            <div class="timeline-marker">2021</div>
                             <div class="publication-title">Google DeepMind (PI: Matthew Botvinick)</div>
                         </div>
                         <div class="publication">
-                            <div class="timeline-marker">2021</div>
                             <div class="publication-title">Invited Symposium on How Prior Knowledge Shapes Encoding of New Memories, Cognitive Neuroscience Society Annual Meeting (CNS)</div>
                             <div class="publication-links">
                                 <a href="https://www.youtube.com/watch?v=IiJHdrqwVWE">[Video]</a>
                             </div>
                         </div>
                         <div class="publication">
-                            <div class="timeline-marker">2021</div>
                             <div class="publication-title">Dynamic Memory Lab, University of California, Davis (PI: Charan Ranganath)</div>
                         </div>
                         <div class="publication">
@@ -338,7 +310,6 @@
                             </div>
                         </div>
                         <div class="publication">
-                            <div class="timeline-marker">2020</div>
                             <div class="publication-title">Neuromatch Conference (NMC)</div>
                         </div>
                     </div>
@@ -365,7 +336,6 @@
                         </div>
 
                         <div class="publication">
-                            <div class="timeline-marker">2024</div>
                             <div class="publication-title">Modeling Multiplicity of Strategies in Free Recall with Neural Networks.</div>
                             <div class="publication-authors">Li, M., Jensen T.K., <strong>Lu, Q.</strong>, Zhang, Q., Mattar M.G.</div>
                             <div class="publication-venue">Conference on Cognitive Computational Neuroscience.</div>
@@ -375,7 +345,6 @@
                         </div>
 
                         <div class="publication">
-                            <div class="timeline-marker">2024</div>
                             <div class="publication-title">Episodic memory supports the acquisition of structured task representations.</div>
                             <div class="publication-authors"><strong>Lu, Q.</strong>, Hummos, A., & Norman, K. A.</div>
                             <div class="publication-venue">Proceedings of the Annual Meeting of the Cognitive Science Society 46 (46).</div>
@@ -395,7 +364,6 @@
                         </div>
 
                         <div class="publication">
-                            <div class="timeline-marker">2023</div>
                             <div class="publication-title">Strategic control of episodic memory through post-gating.</div>
                             <div class="publication-authors">Dong, C., <strong>Lu, Q.</strong>, & Norman, K. A.</div>
                             <div class="publication-venue">Conference on Cognitive Computational Neuroscience.</div>
@@ -425,7 +393,6 @@
                         </div>
 
                         <div class="publication">
-                            <div class="timeline-marker">2018</div>
                             <div class="publication-title">Modeling hippocampal-cortical dynamics during event processing.</div>
                             <div class="publication-authors"><strong>Lu, Q.</strong>, Hasson, U., & Norman, K. A.</div>
                             <div class="publication-venue">Conference on Cognitive Computational Neuroscience.</div>
@@ -435,7 +402,6 @@
                         </div>
 
                         <div class="publication">
-                            <div class="timeline-marker">2018</div>
                             <div class="publication-title">Performance optimization is insufficient for building accurate models for neural representation.</div>
                             <div class="publication-authors">Yu, J., <strong>Lu, Q.</strong>, Hasson, U., Norman, K. A., & Pillow, J. W.</div>
                             <div class="publication-venue">Conference on Cognitive Computational Neuroscience.</div>
@@ -445,7 +411,6 @@
                         </div>
 
                         <div class="publication">
-                            <div class="timeline-marker">2018</div>
                             <div class="publication-title">Generalized schema learning by neural networks.</div>
                             <div class="publication-authors">Chen, C., <strong>Lu, Q.</strong>, Beukers, A., Baldassano, C., & Norman, K.A.</div>
                             <div class="publication-venue">Conference on Cognitive Computational Neuroscience.</div>
