--- a/index.html
+++ b/index.html
@@ -65,8 +65,24 @@
             </div>
         </section>
 
+
+
+        <!-- <section class="section">
+            <div class="container">
+                <h2>Latest News</h2>
+                <div class="news-section">
+                    <div class="news-item">
+                        <span class="news-date">Jan 2026</span>
+                        <p>The lab is launched! Welcome to join us!</p>
+                    </div>
+                </div>
+            </div>
+        </section> -->
+
+
         <section class="section">
             <div class="container">
+
                 <h2>Methods</h2>
                 <div class="research-grid">
                     <div class="research-area">
@@ -88,18 +104,13 @@
                         </center>
                     </div>
                 </div>
-            </div>
-        </section>
 
 
-
-        <section class="section">
-            <div class="container">
                 <h2>Potential impacts</h2>
                 <div class="research-grid">
                     <div class="research-area">
                         <center>
-                            <h3>Artificial intelligence</h3>
+                            <h3>Brain-inspired AI</h3>
                             <img src="imgs/icons/ai.png" alt="NeuroAI" style="width: 50%;">
                         </center>
                     </div>
@@ -120,19 +131,6 @@
         </section>
 
 
-        <!-- <section class="section">
-            <div class="container">
-                <h2>Latest News</h2>
-                <div class="news-section">
-                    <div class="news-item">
-                        <span class="news-date">May 2025</span>
-                        <p>This lab will get launched in Jan 2026!</p>
-                    </div>
-                </div>
-            </div>
-        </section> -->
-
-
         <section class="section">
             <div class="container">
                 <h2>Contact</h2>
@@ -146,14 +144,14 @@
                         </p>
                     </div>
                     <div class="contact-info">
-                        <h3>Email</h3>
+                        <h3>Contact Info</h3>
                         <!-- <a href="mailto:qlu.neuro@gmail.com">qlu.neuro@gmail.com</a> -->
                         <a href="mailto:qihong.lu@cityu.edu.hk">qihong.lu@cityu.edu.hk</a>
                         
                     </div>
 
                     <div class="contact-info">
-                        <h3>Info</h3>
+                        <h3>Lab Info</h3>
                         <a href="https://docs.google.com/document/d/1BbRz7WbxxJ4s1wa3xaVEsZNLDXj2Ve4_eMYq8I7zBIQ/edit?usp=sharing">Lab Manual</a> (in progress)
                         <br>
                         <a href="https://github.com/qlulab">Lab GitHub</a>
