--- a/publications.html
+++ b/publications.html
@@ -97,6 +97,7 @@
                           <div class="publication-venue">bioRxiv, 2025.</div>
                           <div class="publication-links">
                               <a href="https://www.biorxiv.org/content/10.1101/2025.09.01.673596v1">[PDF]</a>
+                              <a href="https://github.com/hyssong/memorymodel">[Code]</a>
                           </div>
                       </div>
 
@@ -106,6 +107,7 @@
                         <div class="publication-venue">bioRxiv, 2025.</div>
                         <div class="publication-links">
                             <a href="https://doi.org/10.1101/2025.09.25.678592">[PDF]</a>
+                            <a href="https://github.com/Veritaria/rnn-free-recall">[Code]</a>
                         </div>
                     </div> 
 
