--- a/qihonglu.html
+++ b/qihonglu.html
@@ -200,6 +200,45 @@
       transform: translateX(-50%) translateY(-4px);
     }
 
+    /* QR codes section */
+    .qr-section{
+      padding: var(--pad);
+      padding-top: 0;
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(140px, 1fr));
+      gap: 16px;
+    }
+
+    .qr-item{
+      background: #ffffff;
+      border: 1px solid #e1e4e8;
+      border-radius: 8px;
+      padding: 16px;
+      text-align: center;
+      transition: transform 0.2s, box-shadow 0.2s;
+    }
+
+    .qr-item:hover{
+      transform: translateY(-2px);
+      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+    }
+
+    .qr-item img{
+      width: 100%;
+      max-width: 180px;
+      height: auto;
+      border-radius: 4px;
+      margin-bottom: 8px;
+    }
+
+    .qr-label{
+      color: var(--muted);
+      font-size: 13px;
+      text-transform: uppercase;
+      letter-spacing: 0.08em;
+      margin-top: 8px;
+    }
+
     /* Language tabs */
     .lang-tabs{
       display: flex;
@@ -376,7 +415,25 @@
         </div>
       </div>
 
+      <!-- <div class="divider"></div> -->
 
+      <!-- QR Codes -->
+      <div class="qr-section">
+        <div class="qr-item">
+          <img src="imgs/namecard_qr.png" alt="Name Card QR Code">
+          <div class="qr-label">
+            <span data-lang="en">Scan for Name Card</span>
+            <span data-lang="zh">扫描名片</span>
+          </div>
+        </div>
+        <!-- <div class="qr-item">
+          <img src="imgs/lab_website_qr.png" alt="Lab Website QR Code">
+          <div class="qr-label">
+            <span data-lang="en">Scan for Lab Website</span>
+            <span data-lang="zh">扫描实验室网站</span>
+          </div>
+        </div>
+      </div> -->
 
     </section>
   </main>
