--- a/people.html
+++ b/people.html
@@ -41,7 +41,7 @@
                         <div class="member-name">Qihong Lu (吕其鸿)</div>
                         <div class="member-role">Principal Investigator</div>
                         <div class="member-links">
-                            <a href="docs/CV_QL-0422.pdf">CV</a>
+                            <a href="docs/CV_QL.pdf">CV</a>
                             <a href="https://scholar.google.com/citations?user=b9D0RmMAAAAJ&hl=en&oi=ao">Google Scholar</a>
                             <a href="https://twitter.com/Qihong_Lu">X</a>
                             <a href="https://bsky.app/profile/qlu.bsky.social">Bluesky</a>
