--- a/join.html
+++ b/join.html
@@ -104,33 +104,44 @@
                     Contact: qihong.lu@cityu.edu.hk
                 <br><br>
 
+
+
                 <div class="collapsible" onclick="toggleSection(this)">
-                    <h4>Research Assistant</h4>
+                    <h4>Postdoctoral Researcher</h4>
                 </div>
                 <div class="collapsible-content">
+                    I'm looking for a postdoc to collabrate on various projects!
                     <ul>
                         <li>Ideal qualifications:
                             <ul>
-                                <li>Bachelor's degree in Computer Science, Neuroscience, Psychology, or related fields</li>
-                                <li>Interest/experience in human memory research</li>
-                                <li>Strong programming skills (Python preferred)</li>
-                                <li>Experience with human neuroimaging / behavioral experiments or machine learning / computational modeling is a plus</li>
+                                <li>Ph.D. in Computer Science, Neuroscience, Psychology, or related fields</li>
+                                <li>Potential synergy with the lab's research directions</li>
+                                <li>Relevant publication record</li>
                             </ul>
                         </li>
                         <li> To apply, please send me the following:
                         <ul>
-                            <li>Tell me about your research experience (if any) + why you would like to work with me!</li>
-                            <li>CV/Resume</li>
+                            <li>A brief statement of ...</li>
                             <ul>
-                                <li>please indicate your GPA (e.g. 3.5/4.0, 85/100, etc.) -- this is related with the CityUHK's entrance requirement</li>
-                                <li>please highlight any relevant research experience you have</li>
+                                <li>your past research experience</li>
+                                <li>your future research plans</li>
+                                <li>why you would like to work with me</li>
                             </ul>
+                            <li>CV/Resume</li>
                             <li>Please indicate your ideal start date and whether there is any flexibility with the start date</li>
-                            <li>Your github repo or other code samples</li>
-                            <li>Contact info for 1 reference</li>
+                            <li>Contact info for 1-3 references</li>
+                        </ul>
+
+                        <li>Funding schemes:
+                        <ul>
+                            <li>My research grants</li>
+                            <li><a href="https://www.ugc.edu.hk/eng/rgc/funding_opport/jrfs/">RGC Junior Research Fellow Scheme </a></li>          
+                            <li><a href="https://www.hkscholars.org/a-list/10545-eng">Hong Kong Scholars Program</a></li>                  
+                            <!-- <li><a href="https://croucher.org.hk/en/funding/study-awards/postdoctoral-fellowships">Croucher Fellowships for Postdoctoral Research</a></li> -->
                         </ul>
                     </ul>
                 </div>
+
 
                 <div class="collapsible" onclick="toggleSection(this)">
                     <h4>Ph.D. Student</h4>
@@ -178,6 +189,7 @@
                     </ul>
                 </div>
 
+
                 <div class="collapsible" onclick="toggleSection(this)">
                     <h4>Visiting Ph.D. Student</h4>
                 </div>
@@ -196,42 +208,52 @@
 
 
                 <div class="collapsible" onclick="toggleSection(this)">
-                    <h4>Postdoctoral Researcher</h4>
+                    <h4>Research Assistant</h4>
                 </div>
                 <div class="collapsible-content">
-                    I'm looking for a postdoc to collabrate on various projects!
                     <ul>
                         <li>Ideal qualifications:
                             <ul>
-                                <li>Ph.D. in Computer Science, Neuroscience, Psychology, or related fields</li>
-                                <li>Potential synergy with the lab's research directions</li>
-                                <li>Relevant publication record</li>
+                                <li>Bachelor's degree in Computer Science, Neuroscience, Psychology, or related fields</li>
+                                <li>Interest/experience in human memory research</li>
+                                <li>Strong programming skills (Python preferred)</li>
+                                <li>Experience with human neuroimaging / behavioral experiments or machine learning / computational modeling is a plus</li>
                             </ul>
                         </li>
                         <li> To apply, please send me the following:
                         <ul>
-                            <li>A brief statement of ...</li>
-                            <ul>
-                                <li>your past research experience</li>
-                                <li>your future research plans</li>
-                                <li>why you would like to work with me</li>
-                            </ul>
+                            <li>Tell me about your research experience (if any) + why you would like to work with me!</li>
                             <li>CV/Resume</li>
+                            <ul>
+                                <li>please indicate your GPA (e.g. 3.5/4.0, 85/100, etc.) -- this is related with the CityUHK's entrance requirement</li>
+                                <li>please highlight any relevant research experience you have</li>
+                            </ul>
                             <li>Please indicate your ideal start date and whether there is any flexibility with the start date</li>
-                            <li>Contact info for 1-3 references</li>
-                        </ul>
-
-                        <li>Funding schemes:
-                        <ul>
-                            <li>My research grants</li>
-                            <li><a href="https://www.ugc.edu.hk/eng/rgc/funding_opport/pdfs/index.html">RGC Postdoctoral Fellowship Scheme</a></li>
-                            <li><a href="https://www.ugc.edu.hk/eng/rgc/funding_opport/jrfs/">RGC Junior Research Fellow Scheme </a></li>          
-                            <li><a href="https://www.hkscholars.org/a-list/10545-eng">Hong Kong Scholars Program</a></li>                  
-                            <li><a href="https://croucher.org.hk/en/funding/study-awards/postdoctoral-fellowships">Croucher Fellowships for Postdoctoral Research</a></li>
+                            <li>Your github repo or other code samples</li>
+                            <li>Contact info for 1 reference</li>
                         </ul>
                     </ul>
                 </div>
 
+                <div class="collapsible" onclick="toggleSection(this)">
+                    <h4>Undergraduate/Master Student</h4>
+                </div>
+                <div class="collapsible-content">
+                    <ul>
+                        <li>Ideal qualifications:
+                            <ul>
+                                <li>Interest/experience in human memory research</li>
+                                <li>Programming skills (Python preferred)</li>
+                            </ul>
+                        </li>
+                        <li> To apply, please send me the following:
+                        <ul>
+                            <li>Tell me about your research experience (if any) + why you would like to work with me!</li>
+                            <li>CV/Resume</li>
+                            <li>Please indicate the amount of time you are available per week</li>
+                        </ul>
+                    </ul>
+                </div>                
 
 
                 <h3>Lab culture / Lab manual</h3>
