--- a/join.html
+++ b/join.html
@@ -136,7 +136,7 @@
                         <ul>
                             <li>My research grants</li>
                             <li><a href="https://www.ugc.edu.hk/eng/rgc/funding_opport/jrfs/">RGC Junior Research Fellow Scheme </a></li>          
-                            <li><a href="https://www.hkscholars.org/a-list/10545-eng">Hong Kong Scholars Program</a></li>                  
+                            <!-- <li><a href="https://www.hkscholars.org/a-list/10545-eng">Hong Kong Scholars Program</a></li>                   -->
                             <!-- <li><a href="https://croucher.org.hk/en/funding/study-awards/postdoctoral-fellowships">Croucher Fellowships for Postdoctoral Research</a></li> -->
                         </ul>
                     </ul>
